# openclaw-enhance

./: .gitignore  AGENTS.md  CLAUDE.md  PLAYBOOK.md  README.md  package-lock.json  package.json  pyproject.toml  sysphus  tsconfig.json
.github/workflows/: ci.yml
.openclaw/identity/: device-auth.json  device.json
.sisyphus/: boulder.json
.sisyphus/drafts/: eta-human-intuitive.md  openclaw-agent-control-mechanisms.md  skill-only-redesign-v2.md
.sisyphus/evidence/: dev-install-final-checks.txt  dev-install-mode-completion.md  f1-backfill-compliance.txt  f1-config-json-docs.txt  f1-dev-mode-workflow.txt  f1-docs-check.txt  f1-dynamic-discovery-banned.txt  f1-dynamic-discovery-compliance.txt  f1-inventory-grep.txt  f1-inventory-sections.txt  f1-openclaw-json-grep.txt  f1-plan-compliance-scan.txt  f1-recheck-inventory.txt  f1-recheck-openclaw-json.txt  f1-recheck-playbook.txt  f1-rerun-compliance-scan.txt  f1-strict-gap-closure-status.txt  f1-strict-gap-closure.txt  f2-backfill-help.txt  f2-backfill-tests.txt  f2-dynamic-discovery-quality.txt  f2-dynamic-discovery-render.txt  f2-quality-review.txt  f2-quality-suite.txt  f2-rerun-quality-suite.txt  f2-strict-gap-tests.txt  f3-backfill-live.txt  (+140 more)
docs/: architecture.md  domain-specialist-migration.md  domain-specialists.md  install.md  main-skills-migration-analysis.md  opencode-iteration-handbook.md  operations.md  testing-playbook.md  troubleshooting.md
extensions/: index.ts
hooks/: index.ts
scripts/: README.md  index.ts  monitor_runtime.py  test_dev_mode.sh
skills/: index.ts
tests/: conftest.py
(+269 files in other folders)
